Add a new configure variable, GMAP_API_KEY, for holding a site's Google Maps API key.
Note that this does not have to be kept secret at all, so I've included
Utah's in the defs-default file.

--- a/www/defs.php3.in
+++ b/www/defs.php3.in
@@ -54,6 +54,7 @@ $EXPOSEARCHIVE  = 0;
 $EXPOSETEMPLATES= 0;
 $USERSELECTUIDS = 1;
 $REMOTEWIKIDOCS = @REMOTEWIKIDOCS@;
+$GMAP_API_KEY   = "@GMAP_API_KEY@";
 
 $TBMAILADDR_OPS		= "@TBOPSEMAIL_NOSLASH@";
 $TBMAILADDR_WWW		= "@TBWWWEMAIL_NOSLASH@";
