--- a/configure.in
+++ b/configure.in
@@ -211,6 +211,7 @@ AC_SUBST(PROTOGENI_SUPPORT)
 AC_SUBST(PROTOGENI_CLEARINGHOUSE)
 AC_SUBST(PROTOGENI_DOMAIN)
 AC_SUBST(STANDALONE_CLEARINGHOUSE)
+AC_SUBST(GMAP_API_KEY)
 
 #
 # Offer both versions of the email addresses that have the @ escaped
