Added support for URN identifiers (see GMOC proposal).  The implementation is very conservative so far: URNs are accepted as input, but all output and database formats are unchanged to preserve compatibility.  Those more pervasive changes will have to be made gradually, once the rest of the federation has been updated.

--- a/protogeni/lib/GNUmakefile.in
+++ b/protogeni/lib/GNUmakefile.in
@@ -16,9 +16,9 @@ LIB_SCRIPTS     = GeniDB.pm GeniUser.pm  \
 		  GeniTicket.pm GeniSliver.pm GeniCredential.pm \
 		  GeniComponent.pm GeniCH.pm GeniEmulab.pm \
 		  GeniAuthority.pm GeniCertificate.pm GeniAggregate.pm \
-		  GeniUtil.pm GeniRegistry.pm GeniUsage.pm
+		  GeniUtil.pm GeniRegistry.pm GeniUsage.pm GeniHRN.pm
 SBIN_SCRIPTS	= plabnodewrapper plabslicewrapper
-		  
+
 SCRIPTS		= addnode.pl
 
 # These scripts installed setuid, with sudo. 
