--- a/configure.in
+++ b/configure.in
@@ -751,6 +751,15 @@ fi
 AC_SUBST(HAVE_MEZZANINE)
 
 #
+# Check for Xerces (required for XML support in assign).
+#
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
+AC_CHECK_HEADER([xercesc/dom/DOM.hpp],[HAVE_XERCES=yes])
+AC_LANG_RESTORE
+AC_SUBST(HAVE_XERCES)
+
+#
 # Testing mode.  In testing mode scripts should not effect hardware state.
 # This is designed to be used with the testsuite software which operates
 # on a test copy of the DB.
